# paper-triage-agent

./: .gitignore  README.md  bedrock.md  download_papers.py  local_instructions.md  papers.json  pyproject.toml
agent/: app.py  pdf_utils.py  schemas.py  triage.py
environment/: ground_truth.json  judge.py  prompt.md  setup.sh
infra/: Dockerfile  deploy.sh
tests/: test_judge.py
